# back/routes/api.php
@@ -15,9 +15,10 @@ use Illuminate\Http\Request;
 
 Route::group(['prefix' => 'auth'], function () {
     Route::post('register', 'API\AuthController@register');
+    Route::post('login', 'API\AuthController@login');
     Route::get('signup/activate/{token}', 'API\AuthController@registerActivate');
-});
-
-Route::middleware('auth:api')->get('/user', function (Request $request) {
-    return $request->user();
+    Route::group(['middleware' => 'auth:api'], function () {
+        Route::get('logout', 'API\AuthController@logout');
+        Route::get('user', 'API\AuthController@user');
+    });
 });
